k8s/base/makeline-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: makeline-service
  labels:
    app: makeline-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: makeline-service
  template:
    metadata:
      labels:
        app: makeline-service
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: makeline-service
      nodeSelector:
        kubernetes.io/os: linux
        agentpool: user
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: makeline-service
          image: ghcr.io/azure-samples/aks-store-demo/makeline-service:2.1.0
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          startupProbe:
            httpGet:
              path: /health
              port: 3001
            failureThreshold: 10
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            failureThreshold: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            failureThreshold: 5
            periodSeconds: 10
