k8s/base/makeline-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: makeline-service
  labels:
    app: makeline-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: makeline-service
